alterada a documentação mais melhorias nas rotas de validação
